--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 VITE_BACKEND_URL=http://localhost:3000
-VITE_YANDEX_STORAGE_IMAGE=https://storage.yandexcloud.net/dmdmeditationimage/
-VITE_AUDIO_BACKET = dmdmeditatonaudio/
-VITE_MEDITATION_BACKET = dmdmeditatonaudio/
 
+VITE_FILE_STORAGE_URL = http://localhost:8000
 
 VITE_KEY = YCAJEVRWppkvppdyg2gXrQd_B
 VITE_SECRET_KEY = YCPNQb-vwfNPS8Ov90tWOSvY-2UFkMutpVskjs25
