--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "easy-yandex-s3": "^2.0.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
