--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_BACKEND_URL=http://78.155.194.209:3000
+VITE_BACKEND_URL=http://localhost:3000
 
-VITE_FILE_STORAGE_URL = http://78.155.194.209:8000
+VITE_FILE_STORAGE_URL = http://localhost:8000
 
 VITE_KEY = YCAJEVRWppkvppdyg2gXrQd_B
 VITE_SECRET_KEY = YCPNQb-vwfNPS8Ov90tWOSvY-2UFkMutpVskjs25
