--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=http://78.155.194.209:3000
+VITE_BACKEND_URL=http://78.155.194.209:3000/
 VITE_FILE_STORAGE_URL = http://78.155.194.209:8000
 
 VITE_KEY = YCAJEVRWppkvppdyg2gXrQd_B
